# ET-rng

./: .gitignore  API.rst  HISTORY.rst  README.rst  micc.json  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
et_rng/: __init__.py
et_rng/f2py_frng/: frng.f90  frng.rst
perf/: rng.py
tests/: __init__.py  test_et_rng.py  test_f2py_frng.py
