[tool.poetry]
name = "ET-rng"
version = "0.0.0"
description = "<Enter a one-sentence description of this project here.>"
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/ET-rng"
homepage = "https://github.com/etijskens/ET-rng"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
